k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skyradar
  namespace: skyradar
  labels:
    app: skyradar
spec:
  type: ClusterIP          # exposto apenas internamente — o Ingress faz o roteamento externo
  selector:
    app: skyradar
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
